@@ -86,6 +86,7 @@ All:
 - Make wx-config compatible with Bourne shells.
 - Fixed wxDb::Open(wxDbConnectInf) when using connection string (Hellwolf Misty)
 - Fixed crash in wxDb::Open() in Unicode build (Massimiliano Marretta)
+- Fixed wxTimeSpan::Format() for negative time spans
 
 All (GUI):
 
